--- a/index.html
+++ b/index.html
@@ -3,35 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="shopping.jpg" type="image/x-icon">
 </head>
 <body>
-    <img src="pic.jpg" alt="" width="100%" height="100%" class="bgimage">
-    <div class="container">
-        
-    </div>
-    <div class="child-container">
-        <header>
-            <h2>Sign Up</h2>
-            <p>It just takes 30 seconds</p>
-        </header>
-        <main>
-            <label for="name" class="bold">Full Name</label>
-            <input type="text" id="name" placeholder="Your Name Here" required>
-            <br>
-            <label for="email" class="bold">Your email</label>
-            <input type="email"  id="email" placeholder="abc@gmail.com" required>
-            <br>
-            <label for="pass" class="bold">Your New Password</label>
-            <input type="password" id="pass" placeholder="Atleast 8 Characters" required>
-            <br>
-            <button class="button">Create Account</button>
-        </main>
-        <footer>
-            <p>Already have an Account? <a href="#">Login</a></p>
-        </footer>
+    <div class="outer-box">
+        <div class="inner-box">
+            <header class="signup-header">
+                <h1>Sign Up</h1>
+                <p>It Just Takes 30 Seconds</p>
+            </header>
+            <main class="signup-body">
+                <form action="#">
+                    <p>
+                        <label for="name">Full Name</label>
+                        <input type="text" id="name" placeholder="Enter Your Name Here" required>
+                    </p>
+                    <p>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" placeholder="abc@gmail.com" required>
+                    </p>
+                    <p>
+                        <label for="pass">Enter New Password</label>
+                        <input type="password" id="pass" placeholder="Enter atleast 8 Characters" required>
+                    </p>
+                    <p>
+                        <input type="submit" id="submit" value="Creat Account">
+                    </p>
+                </form>
+            </main>
+            <footer class="signup-footer">
+                <p>Already have an Account? <a href="#">Login</a></p>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
