--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <input type="password" id="pass" placeholder="Enter atleast 8 Characters" required>
                     </p>
                     <p>
-                        <input type="submit" id="submit" value="Creat Account">
+                        <input type="submit" id="submit" value="Create Account">
                     </p>
                 </form>
             </main>
