--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="outer-box">
         <div class="inner-box">
             <header class="signup-header">
-                <h1>Sign Up</h1>
+                <h1>Sign</h1>
                 <p>It Just Takes 30 Seconds</p>
             </header>
             <main class="signup-body">
