--- a/index1.html
+++ b/index1.html
@@ -15,17 +15,14 @@
             </header>
             <main class="signup-body">
                 <form action="#" method="post">
-                    <p>
-                        <label for="name">Full Name</label>
-                        <input type="text" name="name" id="name" placeholder="Enter Your Name Here" required>
-                    </p>
+                    
                     <p>
                         <label for="email">Email</label>
                         <input type="email" name="email" id="email" placeholder="abc@gmail.com" required>
                     </p> 
                     <p>
-                        <label for="pass">Enter New Password</label>
-                        <input type="password" name="password" id="pass" placeholder="Enter atleast 8 Characters" required>
+                        <label for="pass">Password</label>
+                        <input type="password" name="password" id="pass" placeholder="Enter your password" required>
                     </p>
                     <p>
                         <input type="submit" id="submit" value="LOG IN">
